// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BooleanInput /> with no props 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value={true}
  >
    True
  </option>
  <option
    value={false}
  >
    False
  </option>
</select>
`;

exports[`<BooleanInput /> with placeholder option text 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
>
  <option
    value=""
  >
    Select true or false
  </option>
  <option
    value={true}
  >
    True
  </option>
  <option
    value={false}
  >
    False
  </option>
</select>
`;

exports[`<BooleanInput /> with required  1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  required={true}
  value=""
>
  <option
    disabled={true}
    value=""
  >
    Select an option
  </option>
  <option
    value={true}
  >
    True
  </option>
  <option
    value={false}
  >
    False
  </option>
</select>
`;
